alterações para o gitpages

--- a/assets/pages/habitos.html
+++ b/assets/pages/habitos.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/habitos.css">
+    <link rel="stylesheet" href="../css/habitos.css">
 </head>
 
 <body>
@@ -18,16 +18,19 @@
     <header class="menu">
         <nav class="menu-nav">
             <div class="logo-div">
-                <a href="../../index.html"><img class="logo" src="/assets/img/logo.png" alt=""></a>
+                <a href="../../index.html"><img class="logo" src="assets/img/logo.png" alt=""></a>
             </div>
             <ul class="links">
                 <a href="../../index.html">
                     <li id="inicio">INICIO</li>
                 </a>
-                <a href="/assets/pages/calc-imc.html">
+                <a href="calc-imc.html">
                     <li id="calc-imc-link">CALCULADORA IMC</li>
                 </a>
-                <li id="sobre">SOBRE</li>
+                <a href="sobre.html">
+                    <li id="sobre">SOBRE</li>
+                </a>
+                
             </ul>
         </nav>
     </header>
