--- a/assets/pages/habitos.html
+++ b/assets/pages/habitos.html
@@ -18,7 +18,7 @@
     <header class="menu">
         <nav class="menu-nav">
             <div class="logo-div">
-                <a href="../../index.html"><img class="logo" src="assets/img/logo.png" alt=""></a>
+                <a href="../../index.html"><img class="logo" src="../img/logo.png" alt=""></a>
             </div>
             <ul class="links">
                 <a href="../../index.html">
